Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                         <a href="https://docs.google.com/document/d/1AZdRmlwTFGjt3SEzili-0pDx7vq7HsWW3mEKDicCzPY/edit?usp=sharing"
                                            type="button" class="btn btn-light btn-lg px-4 me-md-2">Resume
                                         </a>
-                                        <a href="/portfolio" type="button"
+                                        <a href="portfolio.html" type="button"
                                            class="btn btn-outline-light btn-lg px-4">Projects
                                         </a>
                                     </div>
@@ -184,4 +184,5 @@
 
 </div>
 </body>
+
 </html>
