--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
 
         <div class="heading-with-button">
             <h1 class="mb-0">My Projects</h1>
-            <a href="/" class="btn btn-dark btn-md">Home</a>
+            <a href="index.html" class="btn btn-dark btn-md">Home</a>
         </div>
 
 
@@ -157,4 +157,5 @@
 
 </div>
 </body>
+
 </html>
