Add data science project

--- a/portfolio.html
+++ b/portfolio.html
@@ -144,7 +144,7 @@
                     </svg>
                 </div>
                 <div><h3 class="fs-2 text-body-emphasis">Profile Card</h3>
-                    <p>A personal web page showcasing my contact info, making it easy for anyone to reach me. <a
+                    <p>Google Trends gives us an estimate of search volume for specific terms. This project explores whether search popularity relates to other types of data.<a
                             href="https://leocoder22.github.io/Profile-Card/">Card</a></p> <a
                             href="https://github.com/leocoder22/Profile-Card"
                             class="btn btn-dark"><i
@@ -152,6 +152,23 @@
                         Link to GitHub
                     </a></div>
             </div>
+
+             <div class="col d-flex align-items-start">
+                <div class="icon-square text-body-emphasis bg-transparent d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor"
+                         class="bi bi-person-vcard-fill" viewBox="0 0 16 16">
+                        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm9 1.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 0-1h-4a.5.5 0 0 0-.5.5M9 8a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 0-1h-4A.5.5 0 0 0 9 8m1 2.5a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 0-1h-3a.5.5 0 0 0-.5.5m-1 2C9 10.567 7.21 9 5 9c-2.086 0-3.8 1.398-3.984 3.181A1 1 0 0 0 2 13h6.96q.04-.245.04-.5M7 6a2 2 0 1 0-4 0 2 2 0 0 0 4 0"/>
+                    </svg>
+                </div>
+                <div><h3 class="fs-2 text-body-emphasis">Data Science</h3>
+                    <p>Google Trends gives us an estimate of search volume for specific terms. This project explores whether search popularity relates to other types of data.</p> <a
+                            href="https://github.com/leocoder22/Search-vs-Price-Data-Science"
+                            class="btn btn-dark"><i
+                            class="bi bi-github"></i>
+                        Link to GitHub
+                    </a></div>
+            </div>
+            
         </div>
     </div>
 
@@ -159,3 +176,4 @@
 </body>
 
 </html>
+
