--- a/portfolio.html
+++ b/portfolio.html
@@ -144,7 +144,7 @@
                     </svg>
                 </div>
                 <div><h3 class="fs-2 text-body-emphasis">Profile Card</h3>
-                    <p>Google Trends gives us an estimate of search volume for specific terms. This project explores whether search popularity relates to other types of data.<a
+                    <p>A personal web page showcasing my contact info, making it easy for anyone to reach me.<a
                             href="https://leocoder22.github.io/Profile-Card/">Card</a></p> <a
                             href="https://github.com/leocoder22/Profile-Card"
                             class="btn btn-dark"><i
