Add 'Tic Tac Toe Game' project to portfolio
Added a new project 'Tic Tac Toe Game' to the portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -167,6 +167,26 @@
                         Link to GitHub
                     </a></div>
             </div>
+
+            <div class="col d-flex align-items-start">
+                <div class="icon-square text-body-emphasis bg-transparent d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="currentColor"
+                         class="bi bi-dice-3-fill" viewBox="0 0 16 16">
+                        <path d="M3 0a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V3a3 3 0 0 0-3-3zm2.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m8 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0M8 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
+                    </svg>
+                </div>
+                <div><h3 class="fs-2 text-body-emphasis">Tic Tac Toe Game</h3>
+                    <p>A classic Tic Tac Toe game. Eas to run and simple to play.</p> <a
+                            href="https://github.com/leocoder22/Tic-Tac-Toe"
+                            class="btn btn-dark"><i
+                            class="bi bi-github"></i>
+                        Link to GitHub
+                    </a></div>
+            </div>
+            
+
+
+
             
         </div>
     </div>
@@ -175,5 +195,6 @@
 </body>
 
 </html>
+
 
 
