--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <p>I’m a student at Priyadarshini College of Engineering, pursuing AI & Data Science. I enjoy playing guitar and am always curious to learn new things.</p>
 
                             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                                <a href="https://docs.google.com/document/d/1AZdRmlwTFGjt3SEzili-0pDx7vq7HsWW3mEKDicCzPY/edit?usp=sharing" class="btn btn-light btn-lg px-4 me-md-2">Resume</a>
+                                <a href="https://www.canva.com/design/DAG3S4EqmTA/md1-J6tiyOkDSbMDMFtTvg/edit?utm_content=DAG3S4EqmTA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-light btn-lg px-4 me-md-2">Resume</a>
                                 <a href="portfolio.html" class="btn btn-outline-light btn-lg px-4">Projects</a>
                             </div>
                         </div>
@@ -146,3 +146,4 @@
 </div>
 </body>
 </html>
+
